# Lune2D

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  game copy.luau  game.lua
.claude/: settings.local.json
.cursor/skills/incident-report/: SKILL.md
default-project/: entities.lua
default-project/assets/: README.md
default-project/behaviors/: Asteroid.lua  GameDirector.lua  HUD.lua  NewBehavior.lua  Ship.lua  VFX.lua
default-project/game/: behavior_props.lua  draw_util.lua  vfx.lua
default-project/scenes/: default.scene.json
docs/: agent-pitfalls.md
docs/incidents/: 2026-04-06-luau-tointegerx-float-truncation-properties.md  2026-04-06-sdl-webview-hittest-mouse-routing.md  2026-04-06-stop-restore-sigbus-stale-behavior-lua-refs.md  README.md  TEMPLATE.md
docs/plans/: 2026-04-06-scene-vm-lua-ref-lifecycle.plan.md  2026-04-07-native-behavior-descriptor-registry.plan.md
lua/: entities.lua  game.lua  world.lua
lua/behaviors/: Asteroid.lua  Bullet.lua  Camera.lua  GameDirector.lua  HUD.lua  NewBehavior.lua  Ship.lua  Sprite.lua  VFX.lua  anotherbehavior.lua
lua/editor/: EditorCamera.lua  Sprite.lua  Transform.lua
lua/game/: behavior_props.lua  constants.lua  draw_util.lua  session.lua
scripts/: capture_viewport_test.sh  gen-scene-ops.mjs
shared/: scene_ops.json
src/: editor_bridge.cpp  editor_bridge.hpp  editor_pick.cpp  editor_pick.hpp  editor_state.cpp  editor_state.hpp  editor_undo.cpp  editor_undo.hpp  engine.d.luau  entity_registry.hpp  main.cpp  scene.cpp  scene.hpp  viewport_math.cpp  viewport_math.hpp  webview_host.hpp  webview_host_mac.mm  webview_host_stub.cpp  webview_viewport.cpp
src/engine/: audio_system.cpp  audio_system.hpp  camera.cpp  camera.hpp  camera_view_matrix.cpp  constants.hpp  engine.cpp  engine.hpp  game_keyboard.cpp  game_keyboard.hpp  immediate_draw.cpp  immediate_draw.hpp  math.hpp  platform_paths.cpp  platform_paths.hpp  scene_loader.cpp  scene_loader.hpp  texture_cache.cpp  texture_cache.hpp
src/engine/lua/: behavior_instance.cpp  behavior_instance.hpp  behavior_schema.cpp  behavior_schema.hpp  lua_api_register.cpp  lua_api_register.hpp  lua_app.cpp  lua_audio.cpp  lua_draw.cpp  lua_editor.cpp  lua_editor_input.cpp  lua_editor_input.hpp  lua_input.cpp  lua_require.cpp  lua_runtime.cpp  lua_runtime.hpp  lua_transform.cpp  lua_transform.hpp  lua_util.hpp  lua_vm_lifecycle.cpp  lua_vm_lifecycle.hpp  script_host.cpp  script_host.hpp
test-project/behaviors/: CameraTest.lua
test-project/game/: visual_tests.lua
test-project/scenes/: default.scene.json
tests/: affine2d_test.cpp  behavior_model_test.cpp  camera_math_test.cpp  camera_sync_test.cpp  editor_input_test.cpp  editor_undo_test.cpp  lua_vm_stub.cpp  viewport_math_test.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.css  App.test.tsx  App.tsx  EntityListPanel.module.css  EntityListPanel.tsx  InspectorPanel.module.css  InspectorPanel.tsx  LuaEditorPanel.css  LuaEditorPanel.test.tsx  LuaEditorPanel.tsx  Toolbar.css  Toolbar.test.tsx  Toolbar.tsx  dockableShellTheme.ts  editorLayoutStorage.test.ts  editorLayoutStorage.ts  engineBridge.test.ts  engineBridge.ts  engineProxy.test.ts  engineProxy.ts  index.css  luaEditorBridge.test.ts  luaEditorBridge.ts  luaEditorStore.test.tsx  luaEditorStore.ts  main.tsx  monacoLuau.test.ts  monacoLuau.ts  projectFileBridge.test.ts  projectFileBridge.ts  sceneAssetPath.test.ts  sceneAssetPath.ts  useEngineEntities.ts  useGameRectBridge.test.tsx  useGameRectBridge.ts  vite-env.d.ts
web/src/editor/: NewScriptDialog.module.css  NewScriptDialog.tsx  behaviorScriptTemplate.test.ts  behaviorScriptTemplate.ts  sceneUndo.test.ts  sceneUndo.ts  tabActions.test.ts  tabActions.ts
web/src/editor/components/: HierarchyList.module.css  HierarchyList.tsx  SortableItem.tsx
web/src/editor/views/: AssetBrowser.module.css  AssetBrowser.test.tsx  AssetBrowser.tsx  EngineInspector.test.tsx  EngineInspector.tsx  Hierarchy.module.css  Inspector.module.css  SceneHierarchy.test.tsx  SceneHierarchy.tsx
web/src/test/: engineBridgeTestUtils.ts  setupTests.ts
